# particle-sim

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  COMPARISON_RESEARCH.md  CUDA-INSTALL-PROGRESS.md  CUDA-UPGRADE-PROGRESS.md  DEVELOPMENT.md  config.toml  plan.md
.github/: copilot-instructions.md
.github/agents/: README.md  adr-generator.agent.md  code-reviewer.agent.md  debugger.agent.md  developer.agent.md  expert-cpp.agent.md  overlord.agent.md  testing.agent.md
.github/hooks/: quality-gate.json
.github/hooks/scripts/: quality-gate.ps1  quality-gate.sh
.github/instructions/: cpp.instructions.md  validate-agents.instructions.md
.github/planning/: PLANS.md
.github/planning/execplans/: 2026-03-12-configure-ai-governance-infrastructure.md  2026-03-12-phase-0-googletest-integration.md  2026-03-12-phase-1-simulation-model-interface.md  2026-03-12-phase-2-toml-config-system.md  2026-03-12-phase-3-uniform-grid-index.md  2026-03-12-phase-4-sph-smoothing-kernel-density.md  2026-03-12-phase-5-boundary-collision.md  2026-03-12-phase-6-density-heatmap.md  2026-03-12-phase-7-spawn-patterns.md  2026-03-12-phase-8-vector-debug.md  2026-03-16-phase-6a-review-remediation.md  2026-03-16-phase-6b-gpu-scalar-field-input.md  2026-03-17-migrate-to-windows-native.md  2026-03-30-compound-engineering-adoption.md  2026-03-30-governance-audit-point-dont-dump.md  _TEMPLATE.md
.github/skills/adopt-template-updates/: SKILL.md
.github/skills/adopt-template-updates/reference/: comparison-scripts.md
.github/skills/build-and-test/: SKILL.md
.github/skills/build-and-test/reference/: troubleshooting.md
.github/skills/conventional-commit/: SKILL.md
.github/skills/create-architectural-decision-record/: SKILL.md
.github/skills/create-architectural-decision-record/reference/: adr-template.md
.github/skills/create-technical-spike/: SKILL.md
.github/skills/create-technical-spike/reference/: spike-template.md
.github/skills/review-upstream-sources/: SKILL.md  source-tracking.json
.github/skills/review-upstream-sources/reference/: particle-sim-adaptations.md  seed-sources.md
.github/skills/validate-agent-tools/: SKILL.md
.github/skills/validate-agent-tools/reference/: agent-roster.md
docs/: DESIGN_DISCUSSION.md  fluid-sim-comparison.md  fluid-sim-migration.md
docs/adr/: 0001-spatial-indexing-strategy.md
docs/spikes/: arch-gpu-scalar-field-visualization-spike.md
scripts/: install-cuda-13.2.sh
shaders/: heatmap.frag  heatmap.vert  particle.frag  particle.vert
src/: main.cpp
src/config/: ConfigError.hpp  ConfigReader.cpp  ConfigReader.hpp  ConfigValue.hpp  ParameterLoader.hpp
src/core/: BoundaryUtils.cuh  CudaUtils.hpp  ISimulationModel.hpp  Parameter.hpp  SimConstants.hpp
src/models/: FluidSPHModel.cu  FluidSPHModel.cuh  FluidSPHModelOps.cpp  SphKernels.cuh
src/rendering/: DensityHeatmap.cu  DensityHeatmap.cuh  GpuScalarFieldInput.cuh  ParticleSystem.cu  ParticleSystem.cuh
src/spatial/: ISpatialIndex.hpp  UniformGridIndex.cu  UniformGridIndex.cuh  UniformGridIndexQueries.cpp
tests/: CMakeLists.txt  README.md
tests/fixtures/: SphTestHelpers.hpp  bad_type.toml  missing_key.toml  valid_config.toml
tests/gpu/core/: BoundaryTest.cu
tests/gpu/models/: FluidDensityTest.cu  SphKernelsTest.cu
tests/gpu/spatial/: UniformGridIndexGpuTest.cpp
tests/unit/: SmokeTest.cpp
tests/unit/config/: ConfigReaderTest.cpp
tests/unit/core/: BoundaryUtilsTest.cpp  ISimulationModelTest.cpp  ParameterTest.cpp
tests/unit/rendering/: DensityHeatmapTest.cpp
tests/unit/spatial/: UniformGridIndexTest.cpp
